--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-12 col-lg-auto order-1 order-lg-2 py-3">
-                            <div class="d-flex justify-content-center"><a href="#"><img class="img-fluid" src="assets/img/anataka_logo.svg" style="height: 90px;"></a></div>
+                            <div class="d-flex justify-content-center"><a href="index.html"><img class="img-fluid" src="assets/img/anataka_logo.svg" style="height: 90px;"></a></div>
                         </div>
                         <div class="col-12 col-sm-auto order-2 order-lg-1 py-3">
                             <div class="row justify-content-center">
@@ -60,8 +60,8 @@
             <div class="mb-3">
                 <div class="container">
                     <ul class="nav text-uppercase justify-content-center">
-                        <li class="nav-item"><a class="nav-link active" href="#">Sklep</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Body Positive</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="category.html">Sklep</a></li>
+                        <li class="nav-item"><a class="nav-link" href="category.html">Body Positive</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">#mamymoc</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Marka</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Salony</a></li>
@@ -125,13 +125,13 @@
             <div class="py-5">
                 <div class="container">
                     <div>
-                        <ul class="nav nav-pills justify-content-center mb-3" role="tablist">
-                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="pill" href="#tab-1">Nowości</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="pill" href="#tab-2">Top</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="pill" href="#tab-3">Promocje</a></li>
+                        <ul class="nav nav-tabs justify-content-center mb-3" role="tablist">
+                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Nowości</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Top</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3">Promocje</a></li>
                         </ul>
                         <div class="tab-content">
-                            <div class="tab-pane active" role="tabpanel" id="tab-1">
+                            <div class="tab-pane fade show active" role="tabpanel" id="tab-1">
                                 <div class="row">
                                     <div class="col-12 col-sm-6 col-lg-4 py-3">
                                         <div class="card border-0">
@@ -139,7 +139,7 @@
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
                                             </div>
                                             <div class="card-body p-0">
-                                                <p class="text-uppercase text-center card-text mb-1">Sukienka Clara</p>
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
                                                     <li class="list-inline-item">209,00 zł</li>
                                                     <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
@@ -153,7 +153,7 @@
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
                                             </div>
                                             <div class="card-body p-0">
-                                                <p class="text-uppercase text-center card-text mb-1">Sukienka Clara</p>
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
                                                     <li class="list-inline-item">209,00 zł</li>
                                                     <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
@@ -167,7 +167,7 @@
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
                                             </div>
                                             <div class="card-body p-0">
-                                                <p class="text-uppercase text-center card-text mb-1">Sukienka Clara</p>
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
                                                 <ul class="list-inline text-uppercase d-flex justify-content-center">
                                                     <li class="list-inline-item">209,00 zł</li>
                                                     <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
@@ -177,8 +177,98 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane" role="tabpanel" id="tab-2"></div>
-                            <div class="tab-pane" role="tabpanel" id="tab-3"></div>
+                            <div class="tab-pane fade" role="tabpanel" id="tab-2">
+                                <div class="row">
+                                    <div class="col-12 col-sm-6 col-lg-4 py-3">
+                                        <div class="card border-0">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                            <div class="card-body p-0">
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
+                                                <ul class="list-inline text-uppercase d-flex justify-content-center">
+                                                    <li class="list-inline-item">209,00 zł</li>
+                                                    <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-sm-6 col-lg-4 py-3">
+                                        <div class="card border-0">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                            <div class="card-body p-0">
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
+                                                <ul class="list-inline text-uppercase d-flex justify-content-center">
+                                                    <li class="list-inline-item">209,00 zł</li>
+                                                    <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-sm-6 col-lg-4 py-3">
+                                        <div class="card border-0">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                            <div class="card-body p-0">
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
+                                                <ul class="list-inline text-uppercase d-flex justify-content-center">
+                                                    <li class="list-inline-item">209,00 zł</li>
+                                                    <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" role="tabpanel" id="tab-3">
+                                <div class="row">
+                                    <div class="col-12 col-sm-6 col-lg-4 py-3">
+                                        <div class="card border-0">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                            <div class="card-body p-0">
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
+                                                <ul class="list-inline text-uppercase d-flex justify-content-center">
+                                                    <li class="list-inline-item">209,00 zł</li>
+                                                    <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-sm-6 col-lg-4 py-3">
+                                        <div class="card border-0">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                            <div class="card-body p-0">
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
+                                                <ul class="list-inline text-uppercase d-flex justify-content-center">
+                                                    <li class="list-inline-item">209,00 zł</li>
+                                                    <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-sm-6 col-lg-4 py-3">
+                                        <div class="card border-0">
+                                            <div class="mb-3">
+                                                <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
+                                            </div>
+                                            <div class="card-body p-0">
+                                                <p class="text-uppercase text-center card-text mb-1"><a href="product.html">SUKIENKA CLARA</a></p>
+                                                <ul class="list-inline text-uppercase d-flex justify-content-center">
+                                                    <li class="list-inline-item">209,00 zł</li>
+                                                    <li class="list-inline-item"><span style="text-decoration: line-through;">369,00 zł</span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
