--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col py-3">
+                        <div class="col-12 col-lg-6 py-3">
                             <h6 class="text-uppercase mb-4"> Anataka Sp. z o.o.</h6>
                             <p class="mb-4">ul. Matejki 9<br>91-402 Łódź<br>NIP: 534-239-92-32<br>REGON: 141523941</p>
                             <p class="mb-4">Sąd Rejonowy dla m. st. Warszawy, XIV Wydział Gospodarczy<br>KRS 0000321146<br>Kapitał zakładowy spółki: 50000 PLN</p>
@@ -100,7 +100,7 @@
                             <p class="mb-4">Konto bankowe EUR: PL89 1750 0009 0000 0000 2611 6422<br>SWIFT: PPABPLPKXXX<br>w Banku BNP Paribas Bank Polska S.A.</p>
                             <p class="mb-0">Konto bankowe GBP: PL83 1750 0009 0000 0000 2891 2749<br>SWIFT: PPABPLPKXXX<br>w Banku BNP Paribas Bank Polska S.A.</p>
                         </div>
-                        <div class="col py-3">
+                        <div class="col-12 col-lg-6 py-3">
                             <h6 class="text-uppercase mb-4"> Formularz kontaktowy</h6>
                             <form>
                                 <div class="form-group"><input class="form-control form-control-lg" type="text" placeholder="Twój adres e-mail"></div>
