--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </ul>
                     </div>
                     <div class="d-lg-none" id="menu__mobile">
-                        <div id="collapse__menu" class="collapse show">
+                        <div id="collapse__menu" class="collapse">
                             <ul class="nav flex-column text-uppercase">
                                 <li class="nav-item"><span class="d-flex justify-content-between"><a class="active d-flex align-items-center" href="category.html">Sklep</a><button class="btn p-0 btn--noshadow" type="button" data-target="#collapse__menu__1" data-toggle="collapse"><i class="la la-plus"></i></button></span>
                                     <ul class="list-unstyled mb-0 px-3 collapse" id="collapse__menu__1">
