--- a/category.html
+++ b/category.html
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-lg-4 col-xl-3 py-3">
+                        <div class="col-12 col-sm-6 col-md-4 col-xl-3 py-3">
                             <div class="card border-0 mb-5">
                                 <div class="card-body p-0">
                                     <ul class="list-unstyled text-uppercase mb-0">
@@ -211,9 +211,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-8 col-xl-9">
+                        <div class="col-12 col-sm-6 col-md-8 col-xl-9">
                             <div class="row">
-                                <div class="col-12 col-sm-6 py-3">
+                                <div class="col-12 col-md-6 py-3">
                                     <div class="card border-0"><a class="d-block" href="product.html">
                                             <div class="mb-3">
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
@@ -228,7 +228,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-6 py-3">
+                                <div class="col-12 col-md-6 py-3">
                                     <div class="card border-0"><a class="d-block" href="product.html">
                                             <div class="mb-3">
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
@@ -243,7 +243,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-6 py-3">
+                                <div class="col-12 col-md-6 py-3">
                                     <div class="card border-0"><a class="d-block" href="product.html">
                                             <div class="mb-3">
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
@@ -258,7 +258,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-6 py-3">
+                                <div class="col-12 col-md-6 py-3">
                                     <div class="card border-0"><a class="d-block" href="product.html">
                                             <div class="mb-3">
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
@@ -273,7 +273,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-6 py-3">
+                                <div class="col-12 col-md-6 py-3">
                                     <div class="card border-0"><a class="d-block" href="product.html">
                                             <div class="mb-3">
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
@@ -288,7 +288,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-6 py-3">
+                                <div class="col-12 col-md-6 py-3">
                                     <div class="card border-0"><a class="d-block" href="product.html">
                                             <div class="mb-3">
                                                 <div><img class="img-fluid w-100" src="assets/img/products/sukienka-clara.jpeg"></div>
