--- a/category.html
+++ b/category.html
@@ -147,7 +147,7 @@
                         <div class="col-12 col-sm-6 col-md-4 col-xl-3 py-3">
                             <div class="card border-0 mb-5">
                                 <div class="card-body p-0">
-                                    <ul class="list-unstyled text-uppercase mb-0">
+                                    <ul class="list-unstyled text-uppercase mb-0 menu--categories">
                                         <li><a href="category.html">Nowości</a></li>
                                         <li><a href="category.html">Do -50%</a></li>
                                         <li><a href="category.html">Tylko on-line</a></li>
@@ -164,8 +164,37 @@
                                         <li><a href="category.html">Bluzy</a></li>
                                         <li><a href="category.html">Płaszcze</a></li>
                                         <li><a href="category.html">Żakiety</a></li>
-                                        <li><a href="category.html">Wyprzedaż</a></li>
-                                        <li><a href="category.html">Akcesoria</a></li>
+                                        <li><span class="d-flex align-items-center"><a href="category.html">Wyprzedaż</a><button class="btn p-0 ml-1 btn--noshadow" type="button" data-target="#menu__categorytree__1" data-toggle="collapse"><i class="la la-angle-right"></i></button></span>
+                                            <ul class="list-unstyled collapse" id="menu__categorytree__1">
+                                                <li><a href="category.html">Bluzki</a></li>
+                                                <li><a href="category.html">Bluzy</a></li>
+                                                <li><a href="category.html">Koszule</a></li>
+                                                <li><a href="category.html">Spodnie</a></li>
+                                                <li><a href="category.html">Kardigany</a></li>
+                                                <li><a href="category.html">Swetry</a></li>
+                                                <li><a href="category.html">Kamizelki</a></li>
+                                                <li><a href="category.html">Sukienki</a></li>
+                                                <li><a href="category.html">Spódnice</a></li>
+                                                <li><a href="category.html">Żakiety</a></li>
+                                                <li><a href="category.html">Kurtki</a></li>
+                                                <li><a href="category.html">Płaszcze</a></li>
+                                                <li><a href="category.html">Akcesoria</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><span class="d-flex align-items-center"><a href="category.html">Akcesoria</a><button class="btn p-0 ml-1 btn--noshadow" type="button" data-target="#menu__categorytree__2" data-toggle="collapse"><i class="la la-angle-right"></i></button></span>
+                                            <ul class="list-unstyled collapse" id="menu__categorytree__2">
+                                                <li><a href="category.html">Paski</a></li>
+                                                <li><a href="category.html">Torby</a></li>
+                                                <li><span class="d-flex align-items-center"><a href="category.html">Biżuteria</a><button class="btn p-0 ml-1 btn--noshadow" type="button" data-target="#menu__categorytree__2__1" data-toggle="collapse"><i class="la la-angle-right"></i></button></span>
+                                                    <ul class="list-unstyled collapse" id="menu__categorytree__2__1">
+                                                        <li><a href="category.html">Naszyjniki</a></li>
+                                                        <li><a href="category.html">Bransolety</a></li>
+                                                        <li><a href="category.html">Kolczyki</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li><a href="category.html">Szale</a></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
