--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="col-12 col-sm-auto order-3 py-3">
                             <div class="row justify-content-center">
                                 <div class="col-auto">
-                                    <div class="btn-group align-items-center" role="group"><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_search.svg"></button><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_account.svg"></button><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_heart.svg"></button><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_bag.svg"></button><button class="btn d-flex d-lg-none align-items-center" type="button" data-target="#collapse__menu" data-toggle="collapse"><i class="icon-menu" style="font-size: 24px;"></i></button></div>
+                                    <div class="btn-group align-items-center" role="group"><button class="btn d-flex align-items-center" type="button" data-target="#modal__search" data-toggle="modal"><img class="img-fluid" src="assets/img/icons/ico_search.svg"></button><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_account.svg"></button><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_heart.svg"></button><button class="btn d-flex align-items-center" type="button"><img class="img-fluid" src="assets/img/icons/ico_bag.svg"></button><button class="btn d-flex d-lg-none align-items-center" type="button" data-target="#collapse__menu" data-toggle="collapse"><i class="icon-menu" style="font-size: 24px;"></i></button></div>
                                 </div>
                             </div>
                         </div>
@@ -539,6 +539,33 @@
                 </div>
             </div>
         </footer>
+    </div>
+    <div>
+        <div class="modal fade" role="dialog" tabindex="-1" id="modal__search" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-body p-0">
+                        <div>
+                            <div class="row no-gutters justify-content-end">
+                                <div class="col-auto"><button class="btn btn-lg d-flex align-items-center p-2" type="button" data-target="#modal__search" data-toggle="modal"><i class="la la-times"></i></button></div>
+                            </div>
+                        </div>
+                        <form>
+                            <div class="p-5">
+                                <div class="form-row mb-3">
+                                    <div class="col"><input class="form-control form-control-lg" type="text" placeholder="Wpisz nazwę produktu"></div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col">
+                                        <div class="d-flex justify-content-end"><button class="btn btn-primary font-weight-bold" type="button">Wyszukaj w sklepie</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
