--- a/shops.html
+++ b/shops.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="col-12 col-sm-auto order-2 order-lg-1 pb-3 pt-lg-3">
                             <div class="row justify-content-center">
-                                <div class="col-auto">
+                                <div class="col-auto border-right">
                                     <div class="btn-group" role="group"><button class="btn" type="button">PL</button><button class="btn" type="button">EN</button></div>
                                 </div>
                                 <div class="col-auto">
